testing/RESTFullApiSample/Product API/api/errors/server-error/Demonstrates a 500 Internal Server Error from an exception.bru
meta {
  name: Demonstrates a 500 Internal Server Error from an exception
  type: http
  seq: 1
}

get {
  url: {{baseUrl}}/api/errors/server-error
  body: none
  auth: inherit
}
